--- a/demo2/src/main/resources/static/index.html
+++ b/demo2/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <comment>Title</comment>
 </head>
 <body>
 <p>Hello my project</p>
